--- a/Nanopore_scripts/Snakefile
+++ b/Nanopore_scripts/Snakefile
@@ -12,7 +12,7 @@ rule fastplong_trimming:
     input:
         dir="/mnt/d/Documentos/Sequences/Nanopore/Raw_data"
     output:
-        directory("/mnt/d/Documentos/Sequences/Nanopore/Fastplong_trimming")
+        directory("/mnt/d/Documentos/Sequences/Nanopore/Fastplong_trimming_Q6")
     params:
         script="run_fastplong.sh"
     shell:
@@ -20,10 +20,20 @@ rule fastplong_trimming:
 
 rule unicycler_assemblies:
     input:
-        dir="/mnt/d/Documentos/Sequences/Nanopore/Fastplong_trimming"
+        dir="/mnt/d/Documentos/Sequences/Nanopore/Fastplong_trimming_Q6"
     output:
-        directory("/mnt/d/Documentos/Sequences/Nanopore/Unicycler_assembly")
+        directory("/mnt/d/Documentos/Sequences/Nanopore/Unicycler_assembly_Q6")
     params:
         script="run_unicycler_N.sh"
     shell:
         "bash {params.script} {input.dir} {output[0]}"
+
+rule canu_assembly:
+    input:
+        nanopore_dir="/mnt/d/Documentos/Sequences/Nanopore/Fastplong_trimming_Q10"
+    output:
+        directory("/mnt/d/Documentos/Sequences/Nanopore/Canu_assembly_Q10")
+    params:
+        script="run_canu.sh"
+    shell:
+        "bash {params.script} {input.nanopore_dir} {output[0]}"
